--- a/index.html
+++ b/index.html
@@ -40,10 +40,65 @@
             font-size: 12px;
         }
 
+        details {
+            cursor: pointer;
+        }
+
+        details:focus {
+            outline: none;
+        }
+
         .hr {
             height: 1px;
             background-color: #006400;
             margin: 50px 0;
+        }
+
+        .form {
+            display: flex;
+            justify-content: space-between;
+            margin: 0;
+            padding: 0;
+        }
+
+        .form__field {
+            background-color: #99b500;
+            color: #006400;
+            font-family: monospace;
+            font-size: 16px;
+            border: 0;
+            outline: none;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+
+        .form__field::placeholder {
+            color: #006400;
+        }
+
+        .progress-bar {
+            border: 1px solid #006400;
+            border-radius: 15px;
+            height: 50px;
+            margin: 0 0 15px 0;
+            box-sizing: border-box;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .progress-bar__line {
+            width: 0;
+            height: 100%;
+            background-color: #006400;
+            transition: 1s;
+        }
+
+        .progress-bar__text {
+            position: absolute;
+            color: red;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
@@ -64,35 +119,37 @@
     <p>Корректное заполнение каждого поля добавляет 20% в индикаторе выполнения.</p>
     <p>Изначально, когда поля еще пустые, иконки быть не должно.</p>
     <p>Использовать в работе указанный ниже массив.</p>
-    <pre>
-        info: [
-            {
-                name: 'Name',
-                value: '',
-                pattern: /^[a-zA-Z ]{2,30}$/
-            },
-            {
-                name: 'Phone',
-                value: '',
-                pattern: /^[0-9]{7,14}$/
-            },
-            {
-                name: 'Email',
-                value: '',
-                pattern: /.+/
-            },
-            {
-                name: 'Some Field 1',
-                value: '',
-                pattern: /.+/
-            },
-            {
-                name: 'Some Field 2',
-                value: '',
-                pattern: /.+/
-            }
-        ]
-    </pre>
+    <details>
+        <pre>
+            info: [
+                {
+                    name: 'Name',
+                    value: '',
+                    pattern: /^[a-zA-Z ]{2,30}$/
+                },
+                {
+                    name: 'Phone',
+                    value: '',
+                    pattern: /^[0-9]{7,14}$/
+                },
+                {
+                    name: 'Email',
+                    value: '',
+                    pattern: /.+/
+                },
+                {
+                    name: 'Some Field 1',
+                    value: '',
+                    pattern: /.+/
+                },
+                {
+                    name: 'Some Field 2',
+                    value: '',
+                    pattern: /.+/
+                }
+            ]
+        </pre>
+    </details>
     <p>Ниже должна быть кнопка "Summary data", которая находится в неактивном состоянии до корректного заполнения всех полей.</p>
     <p>После нажатия появляется второй экран, на котором отображается сводная информация по полям.</p>
     <div class="hr"></div>
@@ -103,14 +160,33 @@
 
         <div class="content">
 
+            <div class="progress-bar">
+                <div class="progress-bar__line"></div>
+                <span class="progress-bar__text">55%</span>
+            </div>
+
             <form class="form"
 
             >
                 <div class="form__item">
-                    <input type="checkbox"
-                           id="form__checkbox1"
-                    >
-                    <label for="form__checkbox1">I agree this text</label>
+                    <label for="form__name"></label>
+                    <input type="text" class="form__field" placeholder="Name" id="form__name">
+                </div>
+                <div class="form__item">
+                    <label for="form__phone"></label>
+                    <input type="text" class="form__field" placeholder="Phone" id="form__phone">
+                </div>
+                <div class="form__item">
+                    <label for="form__email"></label>
+                    <input type="text" class="form__field" placeholder="Email" id="form__email">
+                </div>
+                <div class="form__item">
+                    <label for="form__sf1"></label>
+                    <input type="text" class="form__field" placeholder="Some field 1" id="form__sf1">
+                </div>
+                <div class="form__item">
+                    <label for="form__sf2"></label>
+                    <input type="text" class="form__field" placeholder="Some field 2" id="form__sf2">
                 </div>
             </form>
 
